// Proto version, proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes will be stored
package dk.dd.grpcstudent.stubs.student;
// Generate multiple files with Java classes rather than a single file
option java_multiple_files = true;
option java_generic_services = true;


// Definition of Request message and its parameters
message StudentRequest
{
  string id = 1;
}

// Definition of the Response message and its parameters, which are given numbers of order
message StudentResponse
{
  string id = 1;
  string name = 2;
  string mail = 3;
  Grade si = 4;
  Grade dls = 5;
  Grade tst = 6;
}

// Grade is a new type, students' grades are given either as PASS or FAIL
enum Grade
{
  PASS = 0;
  FAIL = 1;
}

// Here we define the overall service contract, StudentRequest and StudentResponse defined above
// The name of the service is StudentService, getStudentInfo() is an operation it can provide to a remote call
service StudentService
{
    rpc getStudentInfo(StudentRequest) returns (StudentResponse);
}

